--- a/estilo.css
+++ b/estilo.css
@@ -12,7 +12,7 @@ body{
     background-position: center;
 }
 .fundo_barra_navegaçao{
-    background-color:rgb(140, 39, 58,0.8);
+    background-color:rgba(140, 39, 58, 0.8);
     height: 100px;
 }
 .barra_navegaçao{
@@ -36,11 +36,11 @@ body{
     text-align: right;
 }
 .menu a{
-    margin-right: 10%;
+    margin-right: 5%;
     text-decoration: none;
     color:#F2E6CE;
-    font-size:30px;
-    padding:25px 20px;
+    font-size:24px;
+    padding:15px 10px;
 }
 .menu a:hover{
     color:#D95F5F;
@@ -57,5 +57,67 @@ body{
     color:#FFF8D9;
     padding:0;
     margin:0;
+}
+section{
+    display: inline-block;
+    margin-top: 80px;
+    margin-left: 5%;
+    margin-right: 5%;
+    text-align: center;
+    padding: 5%;
+}
+section h2{
+    width: 100%;
+    font-size: 50px;
+    margin: 0;
+    font-family:'fantasy';
+    font-weight: bolder;
+    color:#8c273a
+}
+.serviços{
+    display: inline-block;
+    margin-top:5%;
 
+}
+.card{
+    display: inline-block;
+    width: 30%;
+    padding: 20px;
+    margin:1%;
+    border: 1px solid black;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.card:hover{
+    background:#8c273a;
+    color:#FFF8D9;
+    padding: 40px;
+}
+.card:hover img{
+    display: none;
+}
+.card:hover .card-text{
+    display: none;
+}
+.card:hover .texto-oculto{
+    display:block
+}
+.texto-oculto{
+    display: none;
+}
+footer{
+    margin-top: 100px;
+    height: 300px;
+    background-image:linear-gradient(180deg,#f1a2b1 ,#ad344aba,#420f18 );
+    text-align: center;
+    border-top: 2px solid #8c273a ;
+}
+.logo-rodape{
+    padding: 100px;
+
+}
+.materia{
+    color:#F2E6CE;
+    font-family: 'fantasy';
+    font-size: 36px;
 }
