--- a/responsivo.css
+++ b/responsivo.css
@@ -17,6 +17,9 @@
     .card{
         width: 100%;
     }
+    .card-simples-claro{
+        width: 100%;
+    }
     .contact-btn{
         top: 75%; 
         left: 37%;
