--- a/estilo_conteudo.css
+++ b/estilo_conteudo.css
@@ -9,6 +9,17 @@ body{
     margin-left: 5%;
     margin-right: 5%;
 }
+.titulo{
+    background: #8c273a;
+    height: 80px;
+    display:flex;
+    flex-flow: row wrap;
+    color:#F2E6CE;
+    font-size: 20px;
+}
+.titulo h2{
+    margin-left: 2%;
+}
 .contact-btn{
     background: #8c273a;
     padding: 15px 30px;
